# docs/swagger.yaml
@@ -101,9 +101,9 @@ definitions:
       transaction:
         $ref: '#/definitions/model.StockTransaction'
     type: object
-  command.UpdatePOStatusRequest:
+  command.UpdatePurchaseOrderItemRequest:
     properties:
-      created_by:
+      purchaseOrderItemId:
         type: string
       status:
         $ref: '#/definitions/model.PurchaseOrderStatus'
@@ -191,6 +191,8 @@ definitions:
   command.UpdatePurchaseOrderRequest:
     properties:
       created_by:
+        type: string
+      purchaseOrderId:
         type: string
       supplier_id:
         type: string
